// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getGames Saga should dispatch the gamesLoaded action if it requests the data successfully 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://api.steampowered.com/IPlayerService/GetOwnedGames/v0001/?key=API_KEY&steamid=76561198206720592&include_appinfo=1&format=json",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getGames Saga should dispatch the gamesLoaded action if it requests the data successfully 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://api.steampowered.com/IPlayerService/GetRecentlyPlayedGames/v0001/?key=API_KEY&steamid=76561198206720592&format=json",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getGames Saga should dispatch the gamesLoadingError action if the response errors 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://api.steampowered.com/IPlayerService/GetOwnedGames/v0001/?key=API_KEY&steamid=76561198206720592&include_appinfo=1&format=json",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getGames Saga should dispatch the gamesLoadingError action if the response errors 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://api.steampowered.com/IPlayerService/GetRecentlyPlayedGames/v0001/?key=API_KEY&steamid=76561198206720592&format=json",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;
